--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -161,7 +161,7 @@
 
 .menu a {
   text-decoration: none;
-  color: #ffee06;
+  color: #ffca28 ;
   display: flex;
   align-items: center;
   transition: .3s ease-in-out;
@@ -176,12 +176,12 @@
   a {
     color: #070707;
   }
-  background-color: rgb(255, 238, 6);
+  background-color: #ffca28 ;
 }
 
 li.active {
   color: #070707;
-  background-color: #ffee06;
+  background-color: #ffca28;
 }
 
 .menu svg {
@@ -209,7 +209,7 @@ li.active {
   }
   .menu a {
     text-decoration: none;
-    color: #ffee06;
+    color: #ffca28;
     display: flex;
     align-items: center;
   }
