--- a/src/component/ProductDetails.css
+++ b/src/component/ProductDetails.css
@@ -6,10 +6,11 @@
     align-items: center;
  background-color: #5a42835f;
 
- padding-bottom: 40px;
+
  
    
     max-width: 800px;
+    height: 100vh;
     margin: 0px auto;
   
 }
@@ -43,6 +44,7 @@
 .one-product-name {
   
     color: rgb(105, 105, 105);
+    color: #000000;
 
 font-family: 'Playfair Display', serif;
 text-transform: capitalize;
