--- a/src/component/SignInPage.css
+++ b/src/component/SignInPage.css
@@ -1,36 +1,78 @@
+/* SignInPage.css */
+
+
+
 .sign-in-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+  background: rgba(255, 255, 255, 0.95);
+  padding: 30px 50px;
+  border-radius: 15px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+width: 50%;
+height: auto;
+
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+
+  h2 {
+    margin-bottom: 25px;
+    color: #ffca28;
+    font-size: 28px;
+    font-weight: 600;
   }
   
-  .sign-in-form {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    margin-top: 20px;
-  }
-  
-  .sign-in-form input {
-    margin-bottom: 10px;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    outline: none;
-  }
-  
-  .sign-in-form button {
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .sign-in-form button:hover {
-    background-color: #0056b3;
-  }
-  
+}
+
+
+
+.sign-in-form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin-top: 20px;
+
+}
+
+.sign-in-form input {
+  margin-bottom: 10px;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  outline: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.sign-in-form input:focus {
+  border-color: #ffca28;
+  box-shadow: 0 0 8px rgba(255, 202, 40, 0.6);
+}
+
+.sign-in-form button {
+  padding: 10px;
+  font-size:14px;
+  border-radius: 5px;
+  background-color: #ffca28;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.sign-in-form button:hover {
+  background-color: #ffc107;
+}
+
+.sign-in-form button:active {
+  transform: scale(0.98);
+}
+
+.sign-in-form button:focus {
+  outline: none;
+  box-shadow: 0 0 10px rgba(255, 202, 40, 0.6);
+}
