--- a/src/component/AdminComponents/AddProducts.css
+++ b/src/component/AdminComponents/AddProducts.css
@@ -9,6 +9,7 @@ body::-webkit-scrollbar {
 
 
 
+
 .add-products{
   text-align: center;
   margin-bottom: 20px;
@@ -378,7 +379,7 @@ margin-right: 10px;
   margin-bottom: 10px;
   gap: 30px;
 
-  align-items: center; /* Center content vertically */
+  align-items: center; 
 }
 
 
@@ -424,7 +425,6 @@ margin-right: 10px;
     font-size: 20px;
 
 
-    /* background-color: red; */
   }
 
 
