--- a/src/component/ProductDetails.css
+++ b/src/component/ProductDetails.css
@@ -10,8 +10,8 @@
  
    
     max-width: 800px;
-    height: 100vh;
-    padding-bottom: 20px;
+    height: 100%;
+    padding-bottom: 50px;
 
     margin: 0px auto;
   
@@ -45,18 +45,15 @@
 }
 
 .one-product-name {
-  
-    color: rgb(105, 105, 105);
+ 
     color: #000000;
-
+    width: 100%;
+   
+     
 font-family: 'Playfair Display', serif;
 text-transform: capitalize;
-
-
-
-
-   
-    font-size: 50px;
+    
+    font-size: 30px;
     margin-top: 0px;
     margin-bottom: 20px;
 }
@@ -106,6 +103,7 @@ text-transform: capitalize;
 .table-details td:nth-child(even) {
 
     color: #FFD700;
+   
 
 
 
