--- a/src/component/sidebarComponents/Home.css
+++ b/src/component/sidebarComponents/Home.css
@@ -264,8 +264,8 @@ font-size: 29.3px;
   align-items: center;
   background-color: rgb(0, 0, 0 , 0.1);
   background-color: rgb(255, 255, 255);
- 
 
+  
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -273,22 +273,34 @@ font-size: 29.3px;
   backdrop-filter:blur(5px);
 
   border-radius: 8px;
-
+padding: 8px;
   box-shadow: 0 2px 4px rgba(144, 9, 9, 0.1);
-  padding: 10px;
+width: 152px;
   flex-shrink: 0;
-  /* min-width: 150px; */
+
 }
 
-.product-category-image {
-  width: 150px;
-  height: 150px;
+.category-product img{
+  width: 100%;
+  height: 145px;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
+
 }
+
+/* .product-category-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+} */
 .product-category-image:hover {
   transform: scale(1.14);
 } 
@@ -296,8 +308,12 @@ font-size: 29.3px;
 .category-product p {
   font-size: 16px;
   text-align: center;
-  margin: 0;
+  margin: 0 ;
+width: 70%;
   margin-top: 5px; /* Space between paragraphs */
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow: hidden; /* Hide overflow text */
+  text-overflow: ellipsis; /* Show ellipsis (...) for overflow text */
 }
 
 /* Scrollbar styles for .category-products */
@@ -359,7 +375,7 @@ font-size: 29.3px;
 .fa-icons{
  position: absolute;
 margin-left: 10px;
-margin-top: 8px;
+margin-top: 3px;
 
 
 
