--- a/src/component/sidebarComponents/Home.css
+++ b/src/component/sidebarComponents/Home.css
@@ -33,6 +33,7 @@
   padding-bottom: 10px; /* Optional: Add some space below the items for better visibility */
   scrollbar-width: 14px;
   scrollbar-color: transparent;
+
 }
 
 /* Webkit-based browsers */
@@ -57,6 +58,7 @@
 /* Show scrollbar on hover */
 .types-list:hover::-webkit-scrollbar {
   display: block;
+
 }
 
 .type-item {
@@ -64,8 +66,13 @@
   flex-direction: column;
   align-items: center;
   margin: 0 10px;
+
   flex-shrink: 0; /* Prevent items from shrinking */
+
+
 }
+
+
 
 .type-image {
   width: 100px;
@@ -74,12 +81,23 @@
   border-radius: 50%;
   margin-bottom: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+
+  /* background: linear-gradient(to left ,  #ffdd00, #ffa600) 1 ;
+  background: linear-gradient(#ffdd00 , #ffa600);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+
+
 }
 
 .type-item p {
   font-size: 16px;
   color: #000000;
   text-align: center;
+
+  border-radius: 5px;
+
   margin: 0;
 }
 
